pkg/lang/testdata/types/invalid/open-of-optional.ub
t: open(optional(object({ a: string })))
